feat: ✨ improve  notification for task
